[package]
name = "csc"
description = "Cloudflate status checker"
version = "0.1.0"
edition = "2021"

[dependencies]
time = {version = "0.3", features = ["parsing", "macros", "formatting"]}
clap = { version = "4.2.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
